Add sample deck and load sample button

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
             <input type="file" id="file-input" name="file" accept=".json">
             <button type="submit">Upload Deck</button>
         </form>
+        <button id="load-sample-btn">Load Sample Deck</button>
         <button id="export-btn" style="display:none;">Export Deck</button>
         <div id="status"></div>
     </div>
