--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
             <button type="submit">Upload Deck</button>
         </form>
         <button id="load-sample-btn">Load Sample Deck</button>
+        <a href="/download_sample" download="Sample_Facts.json">Download Sample Deck</a>
         <button id="export-btn" style="display:none;">Export Deck</button>
         <div id="status"></div>
     </div>
