--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,8 @@
             <button type="submit">Upload Deck</button>
         </form>
         <button id="load-sample-btn">Load Sample Deck</button>
-        <a href="/download_sample" download="Sample_Facts.json">Download Sample Deck</a>
+        <a href="/download/Sample_Facts">Download Sample Deck</a>
+        <a href="/download/Tech_Facts">Download Tech Deck</a>
         <button id="export-btn" style="display:none;">Export Deck</button>
         <div id="status"></div>
     </div>
