Remove download links, add default deck loading on startup, export button always visible

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,7 @@
             <button type="submit">Upload Deck</button>
         </form>
         <button id="load-sample-btn">Load Sample Deck</button>
-        <a href="/download/Sample_Facts">Download Sample Deck</a>
-        <a href="/download/Tech_Facts">Download Tech Deck</a>
-        <button id="export-btn" style="display:none;">Export Deck</button>
+        <button id="export-btn">Export Deck</button>
         <div id="status"></div>
     </div>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
